# GeoSpatial_analysis_python

./: .gitignore  README.md  pyproject.toml  requirements.txt
Excercises/: 01.Introduction.ipynb  02.Coordinate_reference_system.ipynb  03.Interactive_map.ipynb  04.Manipulating_geospatial_data.ipynb  05.Proximity_analysis.ipynb  07.Ais_data_exploration.ipynb
Excercises/ais/: Ais_data_filtering.ipynb  Ais_data_selector.ipynb
Lessons/: 01.Introduction.ipynb  02.Coordinate_reference_system.ipynb  03.Interactive_map.ipynb  04.Geo_coding.ipynb  05.Proximity_analysis.ipynb  06.US_vaccine_tracker.ipynb  Introduction.ipynb
