[tool.poetry]
name = "geospatial_analysis_python"
version = "0.1.0"
description = ""
authors = ["Pengfei Liu <liu.pengfei@hotmail.fr>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
geopandas = "^0.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
