[tool.poetry]
name = "geospatial_analysis_python"
version = "0.1.0"
description = ""
authors = ["Pengfei Liu <liu.pengfei@hotmail.fr>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
geopandas = "^0.11.1"
matplotlib = "^3.1"
kaggle = "^1.5.12"
folium = "^0.13.0"
geopy = "^2.2.0"
Rtree = "^1.0.1"
seaborn = "^0.12.1"
#apache-sedona = {extras = ["spark"], version = "^1.2.1"}
pyspark = "^3.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
